--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                             specificClasses = 'whitespace-normal w-[620px]';
                             // Aplica o destaque dos critérios PGE
                             if (pgeRegex) {
-                                processedCellValue = processedCellValue.replace(pgeRegex, `<span class="bg-indigo-700 rounded px-1">$1</span>`);
+                                processedCellValue = processedCellValue.replace(pgeRegex, `<span class="bg-orange-700 rounded px-1">$1</span>`);
                             }
                             break;
                         case 'Critérios PGE':
