--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h2 class="text-2xl font-bold text-white mb-4">Instruções de Uso</h2>
             <div class="text-gray-300 space-y-3">
                 <p><strong class="text-blue-400">1. Selecionar Arquivos:</strong> Clique nos botões "Arquivo Base" e "Arquivo Novo" para carregar suas planilhas .xlsx. O "Arquivo Base" é a base de comparação e o "Arquivo Novo" contém os novos dados.</p>
-                <p><strong class="text-blue-400">2. Comparar:</strong> Após selecionar os dois arquivos, clique no botão "Comparar". A aplicação irá processar os dados e exibir na tabela abaixo todas as linhas que estão no Arquivo Novo, mas não no Arquivo Base, com base na 5ª coluna.</p>
+                <p><strong class="text-blue-400">2. Comparar:</strong> Após selecionar os dois arquivos, clique no botão "Comparar". A aplicação irá processar os dados e exibir na tabela abaixo todas as linhas que estão no Arquivo Novo, mas NÃO no Arquivo Base, com base na 5ª coluna (Teor da NE).</p>
                 <p><strong class="text-blue-400">3. Filtrar Resultados:</strong> Utilize o campo de filtro para refinar a busca nos resultados. Você pode usar o campo de texto ou clicar em um dos botões de "Filtros Rápidos".</p>
                 <p><strong class="text-blue-400">4. Navegar na Tabela:</strong> A tabela pode ser rolada verticalmente e horizontalmente. Quando houver resultados, um botão flutuante com o texto "Próx." aparecerá no canto inferior direito para navegar linha a linha.</p>
             </div>
