--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="h-[calc(100vh-20px)] m-2.5 w-auto flex flex-col bg-gray-800 rounded-lg shadow-2xl">
         <div id="control-bar" class="flex-shrink-0 p-2 bg-gray-800 border-b border-gray-700 space-y-2">
             <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
-                <button id="info-btn" class="flex-shrink-0 h-7 w-7 flex items-center justify-center bg-blue-600 hover:bg-blue-700 rounded-full text-white font-bold text-sm transition-colors" title="Instruções">i</button>
+                <button id="info-btn" class="flex-shrink-0 h-7 w-7 flex items-center justify-center bg-blue-600 hover:bg-blue-700 rounded-full text-white font-bold text-sm transition-colors" title="Instruções">?</button>
                 
                 <label for="file-input-1" class="text-sm px-3 py-1.5 bg-gray-700 hover:bg-gray-600 rounded-md cursor-pointer transition-colors">Arquivo Base</label>
                 <input type="file" id="file-input-1" class="hidden" accept=".xlsx">
