--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     let displayColumns = [];
     let currentRowIndex = -1;
 
-    const PREDEFINED_FILTERS = ['#proc', '[exprovas] [n] #pge', '[corag]', 'graficas]', '[audiencia] [s]', '[pauta] [s]', '[pauta] [n] #pge_repint', '[audiencia] [n] #pge_repint', '[audiencia] [n] #PGE_Extinta', '[pauta] [n] #PGE_Extinta', '[CEEE-PAR]'];
+    const PREDEFINED_FILTERS = ['#proc', '[exprovas] [n] #pge', '[corag]', 'graficas]', '[audiencia] [s]', '[pauta] [s]', '[pauta] [n] #pge_repint', '[audiencia] [n] #pge_repint', '[audiencia] [n] #PGE_Extinta', '[pauta] [n] #PGE_Extinta', 'int[CEEE', '[ELETRICA PARTICIPACOES]'];
 
     // --- LÓGICA DE DRAG AND DROP ---
     function setupDropZone(dropZone, fileInput) {
@@ -593,4 +593,5 @@
 </script>
 </body>
 </html>
+
 
